# embassy-mock

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile.toml  README.md  cliff.toml  flake.nix  release-plz.toml  rust-toolchain.toml  taplo.toml
.github/workflows/: audit.yaml  ci.yaml  codecov.yaml  prs-to-main.yaml  release-plz.yaml
examples/: concrete-timer.rs  concrete-types.rs  executor.rs  ticker.rs  timer.rs
src/: executor.rs  lib.rs  time.rs
src/time/: ticker.rs  timer.rs
