[package]
name = "embassy-mock"
authors = ["Callum Dunster"]
description = "An unofficial collection of mocked types for the Embassy framework"
license = "MIT"
repository = "https://github.com/cdunster/embassy-mock"
version = "0.0.0"
edition = "2021"

[[example]]
name = "executor"
required-features = ["executor", "examples"]
test = true

[[example]]
name = "ticker"
required-features = ["time", "examples"]
test = true

[dependencies]
embassy-executor = { version = "0.2.0", features = [
  "nightly",
], optional = true }
embassy-time = { version = "0.1.2", optional = true }
thiserror-no-std = "2.0.2"

[dev-dependencies]
embassy-futures = "0.1.0"
embassy-executor = { version = "*", features = [
  "nightly",
  "arch-std",
  "integrated-timers",
] }
embassy-time = { version = "*", features = ["std"] }

[features]
default = ["executor", "time"]
executor = ["dep:embassy-executor"]
time = ["dep:embassy-time"]
examples = [
  "dep:embassy-time",
  "embassy-time/std",
  "embassy-executor/executor-thread",
  "embassy-executor/arch-std",
  "embassy-executor/integrated-timers",
]
