[package]
name = "embassy-mock"
authors = ["Callum Dunster"]
description = "An unofficial collection of mocked types for the Embassy framework"
license = "MIT"
repository = "https://github.com/cdunster/embassy-mock"
version = "0.1.0"
edition = "2021"

[[example]]
name = "executor"
required-features = ["executor", "examples"]
test = true

[[example]]
name = "ticker"
required-features = ["time", "examples"]
test = true

[[example]]
name = "timer"
required-features = ["time", "examples"]
test = true

[[example]]
name = "concrete-types"
required-features = ["executor", "time", "examples"]
test = true

[dependencies]
embassy-executor = { version = "0.2.0", features = [
  "nightly",
], optional = true }
embassy-time = { version = "0.1.2", optional = true }
snafu = { version = "0.7.5", default-features = false }

[dev-dependencies]
embassy-futures = "0.1.0"
embassy-executor = { version = "0.2.0", features = [
  "nightly",
  "arch-std",
  "integrated-timers",
] }
embassy-time = { version = "0.1.2", features = ["std"] }

[features]
default = ["executor", "time"]
executor = ["dep:embassy-executor"]
time = ["dep:embassy-time"]
examples = [
  "dep:embassy-time",
  "embassy-time/std",
  "embassy-executor/executor-thread",
  "embassy-executor/arch-std",
  "embassy-executor/integrated-timers",
]
